--- a/package.json
+++ b/package.json
@@ -15,21 +15,26 @@
   },
   "scripts": {
     "test": "jest .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "start": "ts-node main.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.13",
+    "@types/uuid": "^8.3.4",
     "husky": "^7.0.4",
     "jest": "^27.4.5",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
     "ts-jest": "^27.1.2",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "mqtt": "^4.3.4"
+    "mqtt": "^4.3.4",
+    "uuid": "^8.3.2"
   }
 }
