--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/blessed": "^0.1.19",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.13",
     "@types/uuid": "^8.3.4",
@@ -34,6 +35,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "blessed": "^0.1.81",
     "mqtt": "^4.3.4",
     "uuid": "^8.3.2"
   }
