--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "sicp",
+  "name": "gps-ts",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "main.ts",
   "jest": {
     "transform": {
       "^.+\\.(ts|tsx)$": "ts-jest"
@@ -25,7 +25,6 @@
     "@types/blessed": "^0.1.19",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.13",
-    "@types/uuid": "^8.3.4",
     "husky": "^7.0.4",
     "jest": "^27.4.5",
     "prettier": "^2.5.1",
@@ -36,7 +35,6 @@
   },
   "dependencies": {
     "blessed": "^0.1.81",
-    "mqtt": "^4.3.4",
-    "uuid": "^8.3.2"
+    "mqtt": "^4.3.4"
   }
 }
