add test coverage script

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "scripts": {
     "test": "jest .",
+    "test:coverage": "jest . --coverage",
     "prepare": "husky install",
     "start": "ts-node src/main.ts"
   },
